--- a/about.html
+++ b/about.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
-
+​
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+​
     <title>BCMUN</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
-
+​
     <link href="assets/img/favicon.png" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
+​
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Inter:wght@400;500&family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-
+​
     <link href="assets/vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="assets/vendor/glightbox/glightbox.min.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-
+​
     <link href="assets/css/variables.css" rel="stylesheet">
     <link href="assets/css/main.css" rel="stylesheet">
     <style>
@@ -35,17 +35,17 @@
         color: var(--color-links-hover);
         text-decoration: none;
       }
-
+​
       a:hover {
         color: var(--color-links-hover);
         text-decoration: none;
       }
-
+​
       @media (min-width: 1203px) {
         .show-on-mobile{
           display: none;
         }
-
+​
         .icon {
           color: var(--color-links);
           text-decoration: none;
@@ -53,7 +53,7 @@
           margin-left:.5rem;
         }
       }
-
+​
       @media (max-width: 1202px) {
         .show-on-desktop{
           display: none;
@@ -63,14 +63,14 @@
           text-decoration: none;
         }
       }
-
+​
       .icon:hover {
         color: var(--color-links-hover);
         text-decoration: none;
       }
     </style>
 </head>
-
+​
 <body>
   <header id="header" class="header align-items-center fixed-top">
     <div class="announcement"><h4><nobr>Staff applications for BCMUN 2023 are now open!</nobr> <nobr>Click <a href="staff-application.html">here</a> to apply!</nobr></h4></div>
@@ -116,7 +116,7 @@
       </div>
     </div>
   </header>
-
+​
   <main id="main">
     <center><h1 style="padding: 30px;">About Us</h1></center>
     <div class="center">
@@ -129,7 +129,7 @@
       <div class="section-header d-flex justify-content-between align-items-center mb-4">
         <h3 style="color:var(--color-blue)">Our Venue</h3>
       </div>
-
+​
       <div class="container-fluid container-xl align-items-center justify-content-between">
         <div class="row">
           <div class="col-lg-4 text-left mb-2">
@@ -142,12 +142,12 @@
                 obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
               }
             </script>
-
+​
             <iframe src="venue-slider.html" frameborder="0" scrolling="no" onload="resizeIframe(this)" style="width:100%"></iframe>
           </div>
         </div>
       </div>
-
+​
       <div class="section-header d-flex justify-content-between align-items-center mb-4">
         <h3 style="color:var(--color-blue)">Our missions</h3>
       </div>
@@ -162,13 +162,13 @@
           <div class="col-lg-6 text-left mb-5">
             <center><h4>Raising Awareness of Global Events</h4></center>
             <p>BCMUN started off as an online conference; we hoped that this would enable voices from all over the world to speak to the youth from Vancouver. This year, although British Columbia Model United Nations is moving in person, we still aim to have delegates from all over the world still connect at our conference. Our committees and topics are designed so that participants can enrich their knowledge of our world's current position. With staff members who are experts in their respective topics, we are confident that BCMUN will be an exquisite experience for everyone.</p>
-            <p>If you would like to view our conference's committees along with its topic, please click <a href="committee.html"><u>here</u></a>. For any further questions, please contact <a href="mailto:inquiries@bcmun.org">sg@bcmun.org</a>.</p>
+            <p>If you would like to view our conference's committees along with its topic, please click <a href="committee.html"><u>here</u></a>. For any further questions, please contact <a href="mailto:sg@bcmun.org">sg@bcmun.org</a>.</p>
           </div>
         </div>
       </div>
     </div>
   </main>
-
+​
   <footer id="footer" class="footer">
       <div class="footer-legal">
           <div class="container">
@@ -181,12 +181,12 @@
           </div>
       </div>
   </footer>
-
+​
   <script src="assets/vendor/bootstrap/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/glightbox/glightbox.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
-
+​
 </html>
