--- a/conference-policies.html
+++ b/conference-policies.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
-
+​
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+​
     <title>BCMUN</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
-
+​
     <link href="assets/img/favicon.png" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
+​
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Inter:wght@400;500&family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-
+​
     <link href="assets/vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="assets/vendor/glightbox/glightbox.min.css" rel="stylesheet">
     <link href="assets/vendor/aos/swiper-bundle.min.css" rel="stylesheet">
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-
+​
     <link href="assets/css/variables.css" rel="stylesheet">
     <link href="assets/css/main.css" rel="stylesheet">
     <style>
@@ -30,13 +30,13 @@
         width: 70%;
         padding: 10px;
       }
-
+​
       @media (min-width: 1203px) {
         .show-on-mobile{
           display: none;
         }
       }
-
+​
       @media (max-width: 1202px) {
         .show-on-desktop{
           display: none;
@@ -44,7 +44,7 @@
       }
     </style>
 </head>
-
+​
 <body>
   <header id="header" class="header align-items-center fixed-top">
     <div class="announcement"><h4><nobr>Staff applications for BCMUN 2023 are now open!</nobr> <nobr>Click <a href="staff-application.html">here</a> to apply!</nobr></h4></div>
@@ -96,30 +96,27 @@
       </div>
     </div>
   </header>
-
+​
   <main id="main">
     <center><h1 style="padding: 30px;">Conference Policies</h1></center>
     <div class="center">
       <div class="section-header d-flex justify-content-between align-items-center mb-4">
-        <h3 style="color:var(--color-blue)">Code of Conduct</h3>
+          <h3 style="color:var(--color-blue)">Diplomatic Code</h3>
       </div>
-      <p>BCMUN is dedicated to fostering a positive and fruitful academic atmosphere for every attendee. As a participant in BCMUN, you are expected to adhere to the regulations outlined in our Code of Conduct. Any violation of these regulations may lead to disciplinary measures, such as an apology, a suspension of speaking privileges, or an expulsion from the conference. If you have any inquiries, please contact the Secretary-General, Michael Xie. (Email can be found under the “contact” page.)</p>
+      <p>BCMUN is devoted to ensuring that our conference enables delegates to develop their knowledge of global issues. In order to ensure that all delegates have a positive experience, participants are required to follow our conference policies. By attending our conference, you agree to adhere to the sections shown below. If you have any questions, please contact the Secretary General, Michael Xie, at <a href="mailto:sg@bcmun.org">sg@bcmun.org</a></p>
       
       <h4>Discrimination</h4>
-      <p>At BCMUN, all attendees must adhere to federal and provincial laws that prohibit discriminatory behavior. It is strictly forbidden for any participant, whether it be a delegate, staff member, faculty advisors, or any other individual within the conference premises, to engage in discrimination or harassment based on race, national or ethnic origin, color, religion, age, gender, sexual orientation, gender identity or expression, marital status, family status, genetic characteristics, disability, creed, or religious belief. BCMUN stresses the importance of mutual respect and acceptance of different viewpoints; delegates are reminded to refrain from using abusive or defamatory language or resorting to personal attacks.</p>
-
+      <p>BCMUN is committed to providing a safe and inclusive environment for all participants. Discrimination, harassment, and any other forms of unacceptable behavior will not be tolerated. Provincial and federal laws regarding discrimination are strictly enforced. Discrimination based on race, color, national or ethnic origin, age, religion, disability, sexual orientation, gender identity, or any other characteristic protected by law are prohibited. All participants are urged to report any instances of discrimination or harassment to our staff or secretariat, who will take appropriate action to address the situation. By upholding these discrimination policies, we aim to create a welcoming and inclusive space where everyone can feel valued and respected.</p>
+​
       <h4>Gender-based Violence</h4>
-      <p>BCMUN maintains a strictly enforced policy of zero-tolerance towards sexual harassment, assault, and discrimination. Any individual who has witnessed or experienced such inappropriate conduct is urged to immediately report the incident to the Secretariat team. Failure to comply with this policy will result in immediate disciplinary measures, including verbal reprimand, expulsion from the conference, or any other necessary actions.</p>
-
-      <h4>Integrity</h4>
-      <p>BCMUN expects all delegates to exhibit professionalism and courtesy in their demeanor, choice of language, and overall attire. This entails wearing suitable clothing for committee meetings and other BCMUN functions</p>
-
+      <p>At BCMUN, we take the issue of gender-based violence very seriously; strict rules to ensure a safe and respectful environment for all attendees has been implemented. Our policies are in accordance with both provincial and federal laws, and we have zero tolerance for any form of gender-based violence, including but not limited to physical, sexual, emotional, and verbal abuse. Any behavior modeling gender-based violence will result in immediate disciplinary punishments, including a potential removal from the conference without refund.</p>
+​
       <h4>Wifi Policy</h4>
-      <p>At BCMUN, we believe that pre-conference research is a vital component of the MUN experience. We have a strict no-wifi policy during the conference in order to encourage delegates to conduct research beforehand and develop their public speaking skills. We recommend that all participants complete research on their respective topics prior to the conference so that they can actively contribute to discussions and gain a better understanding of the world around them. We hope that our no-wifi policy will inspire delegates to delve deeper into their assigned topics and engage in productive dialogue with their fellow participants.</p>
-
+      <p>Unless otherwise specified by your committee director, devices such as laptops and phones will not be given access to wifi. BCMUN believes that conducting appropriate levels of research prior to the conference is crucial to self development. Moreover, well researched delegates enable committee sessions to flow smoother and topics to be debated in more depth. If there are, however, special circumstances in which wifi is required, wifi may be granted. </p>
+​
       <h4>Plagiarism</h4>
-      <p>At BCMUN, we believe in upholding academic integrity and, therefore, we have a strict policy against plagiarism. All delegates are required to submit original work and properly cite any outside sources they use. We believe that plagiarism undermines the values of our conference and impedes the development of critical thinking and research skills that are essential for the MUN experience. Any delegate found guilty of plagiarism will face severe consequences. We want to ensure that all participants have a fair and equal opportunity to engage in stimulating discussions and debates, and plagiarism is not conducive to achieving this goal.</p>
-
+      <p>British Columbia Model United Nations (BCMUN) strictly prohibits plagiarism in all submissions made by its participants. Plagiarism is a severe offense that compromises the conference's academic integrity and lessens everyone's ability to enrich their academic knowledge. Consequently, BCMUN has a zero-tolerance policy towards plagiarism and will investigate any suspected cases. Any delegates found to have plagiarized their position papers will be removed from consideration for committee awards. Moreover, all delegates are required to appropriately cite sources that they have referred to. By adhering to plagiarism guidelines, BCMUN is dedicated to supporting scholastic excellence and ensuring that every participant has a rewarding experience.</p>
+​
       <div class="section-header d-flex justify-content-between align-items-center mb-4">
         <h3 style="color:var(--color-blue)">Awards</h3>
       </div>
@@ -132,7 +129,7 @@
         <li>Best position paper</li>
       </ul>
       <p>In order to be eligible for any award, delegates must submit a position paper to their directors by the deadline. Moreover, delegates found to have violated the BCMUN Code of Conducts will be disqualified from award consideration.</p>
-
+​
       <h4>Delegation Awards</h4>
       <p>BCMUN offers a number of awards to delegations that commend the overall performance by a school delegation. The awards are as follows:</p>
       <ul>
@@ -143,7 +140,7 @@
       <p>Points for each award received by delegates will be awarded to their school delegations. Best position papers earn 1 point, honorable mentions earn 2 points, outstanding delegates earn 3 points, and best delegates earn 5 points for their delegation. Points for each delegation will be added up by the secretariat team and awards will be issued to the winning school delegations.</p>
     </div>
   </main>
-
+​
   <footer id="footer" class="footer">
       <div class="footer-legal">
           <div class="container">
@@ -156,7 +153,7 @@
           </div>
       </div>
   </footer>
-
+​
   <script src="assets/vendor/bootstrap/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/glightbox/glightbox.min.js"></script>
@@ -164,5 +161,5 @@
   <script src="assets/vendor/aos/swiper-bundle.min.js"></script>
   <script src="assets/js/main.js"></script>
 </body>
-
+​
 </html>
